Better version of this

--- a/ansible/playbooks/base_packages.yml
+++ b/ansible/playbooks/base_packages.yml
@@ -3,7 +3,6 @@
   name: base_packages
   hosts: all
   tasks:
-   - name: Install git
-     yum:
-       name: git
-       state: present
+     - yum: name='{{ item }}' state=present
+       with_items:
+         - git
