--- a/ansible/roles/common/tasks/base_packages.yml
+++ b/ansible/roles/common/tasks/base_packages.yml
@@ -1,4 +1,5 @@
-- yum: name='{{ item }}' state=present
-       with_items:
+- name: base packages
+  yum: name='{{ item }}' state=present
+  with_items:
          - git
          - vim
