--- a/ansible/roles/common/tasks/users.yml
+++ b/ansible/roles/common/tasks/users.yml
@@ -10,4 +10,12 @@
     src: home/ddietz/
     dest: /home/ddietz/
     owner: ddietz
+
+- file:
+    path: /home/ddietz/.ssh
+    mode: '0700'
+     
+- file:
+    path: /home/ddietz/.ssh/id_rsa
+    mode: '0600'
      
