--- a/ansible/roles/common/tasks/base_packages.yml
+++ b/ansible/roles/common/tasks/base_packages.yml
@@ -1,6 +1,8 @@
 - name: base packages
   yum: name='{{ item }}' state=present
   with_items:
+         - bzip2
+         - bzip2-libs
          - git
          - vim
          - wget
