Add more packages

--- a/ansible/roles/common/tasks/base_packages.yml
+++ b/ansible/roles/common/tasks/base_packages.yml
@@ -5,6 +5,12 @@
          - bzip2-libs
          - gcc
          - git
+         - munge
+         - munge-libs
+         - munge-devel
+         - readline-devel
+         - perl
+         - pam-devel
          - rpm-build
          - vim
          - wget
