--- a/ansible/roles/common/tasks/base_packages.yml
+++ b/ansible/roles/common/tasks/base_packages.yml
@@ -2,14 +2,17 @@
   yum: name='{{ item }}' state=present
   with_items:
          - bzip2
+         - bzip2-devel
          - bzip2-libs
          - gcc
          - git
          - munge-libs
          - munge-devel
          - readline-devel
+         - openssl-devel
          - perl
          - pam-devel
          - rpm-build
          - vim
          - wget
+         - zlib-devel
