--- a/ansible/roles/common/tasks/base_packages.yml
+++ b/ansible/roles/common/tasks/base_packages.yml
@@ -2,9 +2,11 @@
   yum: name='{{ item }}' state=present
   with_items:
          - autoconf
+         - automake
          - bzip2
          - bzip2-devel
          - bzip2-libs
+         - libtool
          - gcc
          - git
          - readline-devel
