Add perl packace

--- a/ansible/roles/common/tasks/base_packages.yml
+++ b/ansible/roles/common/tasks/base_packages.yml
@@ -12,6 +12,7 @@
          - readline-devel
          - openssl-devel
          - perl
+         - perl-ExtUtils-MakeMaker
          - pam-devel
          - rpm-build
          - vim
