--- a/ansible/roles/common/tasks/base_packages.yml
+++ b/ansible/roles/common/tasks/base_packages.yml
@@ -10,6 +10,7 @@
          - mariadb
          - mariadb-devel
          - mariadb-libs
+         - mlocate
          - gcc
          - git
          - readline-devel
