--- a/ansible/roles/master/tasks/slurm.yml
+++ b/ansible/roles/master/tasks/slurm.yml
@@ -2,7 +2,7 @@
   file:
     path: /var/run/slurmctld.pid
     mode: '0644'
-    state: file
+    state: touch
     owner: slurm
     group: slurm
      
