--- a/ansible/roles/common/tasks/slurm.yml
+++ b/ansible/roles/common/tasks/slurm.yml
@@ -5,4 +5,11 @@
     state: directory
     owner: slurm
     group: slurm
-     
+
+- name: set up slurm config
+  file:
+    src: etc/slurm/slurm.conf
+    dest: /etc/slurm/slurm.conf
+    mode: '0644'
+    owner: slurm
+    group: slurm
