--- a/ansible/roles/common/files/etc/slurm/slurm.conf
+++ b/ansible/roles/common/files/etc/slurm/slurm.conf
@@ -90,5 +90,6 @@ JobCompType=jobcomp/none
 #
 # COMPUTE NODES
 NodeName=do-nyc[1] Procs=1 State=UNKNOWN
+NodeName=master Procs=1 State=UNKNOWN
 PartitionName=DEFAULT State=UP
 PartitionName=do Nodes=do-nyc[1] Default=YES MaxTime=INFINITE State=UP
