--- a/ansible/roles/common/tasks/slurm.yml
+++ b/ansible/roles/common/tasks/slurm.yml
@@ -13,3 +13,11 @@
     mode: '0644'
     owner: slurm
     group: slurm
+
+- name: set up munge key
+  file:
+    src: etc/munge/munge.key
+    dest: /etc/munge/munge.key
+    mode: '0644'
+    owner: root
+    group: root
