--- a/ansible/roles/common/tasks/slurm.yml
+++ b/ansible/roles/common/tasks/slurm.yml
@@ -7,7 +7,7 @@
     group: slurm
 
 - name: set up slurm config
-  file:
+  copy:
     src: etc/slurm/slurm.conf
     dest: /etc/slurm/slurm.conf
     mode: '0644'
@@ -15,7 +15,7 @@
     group: slurm
 
 - name: set up munge key
-  file:
+  copy:
     src: etc/munge/munge.key
     dest: /etc/munge/munge.key
     mode: '0644'
