--- a/ansible/roles/common/tasks/slurm.yml
+++ b/ansible/roles/common/tasks/slurm.yml
@@ -22,7 +22,7 @@
     owner: munge
     group: munge
 
-- name: munged
+- name: munge service
   service:
-    name: munged
+    name: munge
     state: started
