--- a/ansible/roles/common/files/etc/slurm/slurm.conf
+++ b/ansible/roles/common/files/etc/slurm/slurm.conf
@@ -92,4 +92,4 @@ JobCompType=jobcomp/none
 NodeName=do-nyc[1] Procs=1 State=UNKNOWN
 NodeName=master NodeAddr=10.136.157.242 Procs=1 State=UNKNOWN
 PartitionName=DEFAULT State=UP
-PartitionName=do Nodes=do-nyc[1] Default=YES MaxTime=INFINITE State=UP
+PartitionName=do Nodes=master,do-nyc[00] Default=YES MaxTime=INFINITE State=UP
