Set ansible config

--- a/ansible/roles/master/tasks/ansible.yml
+++ b/ansible/roles/master/tasks/ansible.yml
@@ -8,3 +8,9 @@
     src: usr/sbin/run_ansible
     dest: /usr/sbin/run_ansible
     mode: '0755'
+
+- name: install ansible cfg
+  copy:
+    src: etc/ansible/ansible.cfg
+    dest: /etc/ansible/ansible.cfg
+    mode: '0644'
