--- a/ansible/roles/common/tasks/users.yml
+++ b/ansible/roles/common/tasks/users.yml
@@ -17,8 +17,12 @@
     mode: '0700'
      
 - file:
-    path: /home/ddietz/.ssh/id_rsa
+  copy:
+    src: home/ddietz/.ssh/id_rsa
+    dest: /home/ddietz/.ssh/id_rsa
     mode: '0600'
+    owner: ddietz
+    group: ddietz
      
 - name: add slurm
   user:
