Install python lib

--- a/ansible/roles/master/tasks/do.yml
+++ b/ansible/roles/master/tasks/do.yml
@@ -9,3 +9,7 @@
     src: usr/sbin/do_apikey
     dest: /usr/sbin/do_apikey
     mode: '0755'
+
+- name: DO API libryar
+  pip:
+    name: python-digitalocean
