Add URL instead

--- a/ansible/roles/common/tasks/base_packages.yml
+++ b/ansible/roles/common/tasks/base_packages.yml
@@ -7,7 +7,7 @@
          - bzip2
          - bzip2-devel
          - bzip2-libs
-         - epel-release
+         - "wget https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm"
          - libtool
          - mariadb
          - mariadb-devel
