--- a/ansible/roles/common/files/etc/slurm/slurm.conf
+++ b/ansible/roles/common/files/etc/slurm/slurm.conf
@@ -89,7 +89,7 @@ JobCompType=jobcomp/none
 #AccountingStorageUser=
 #
 # COMPUTE NODES
-NodeName=do-nyc[00] Procs=1 State=UNKNOWN
-NodeName=master NodeAddr=10.136.157.242 Procs=1 State=UNKNOWN
+NodeName=aws[00] Procs=1 State=UNKNOWN
+NodeName=master NodeAddr=master.dandietz.com Procs=1 State=UNKNOWN
 PartitionName=DEFAULT State=UP
-PartitionName=do Nodes=master,do-nyc[00] Default=YES MaxTime=INFINITE State=UP
+PartitionName=aws Nodes=master,aws[00] Default=YES MaxTime=INFINITE State=UP
