--- a/ansible/roles/common/files/etc/slurm/slurm.conf
+++ b/ansible/roles/common/files/etc/slurm/slurm.conf
@@ -89,7 +89,6 @@ JobCompType=jobcomp/none
 #AccountingStorageUser=
 #
 # COMPUTE NODES
-NodeName=aws[00] Procs=1 State=UNKNOWN
 NodeName=master NodeAddr=master.dandietz.com Procs=1 State=UNKNOWN
 PartitionName=DEFAULT State=UP
-PartitionName=aws Nodes=master,aws[00] Default=YES MaxTime=INFINITE State=UP
+PartitionName=aws Nodes=master Default=YES MaxTime=INFINITE State=UP
