--- a/ansible/roles/common/files/etc/slurm/slurm.conf
+++ b/ansible/roles/common/files/etc/slurm/slurm.conf
@@ -90,4 +90,4 @@ JobCompType=jobcomp/none
 #
 # COMPUTE NODES
 NodeName=master.dandietz.com NodeAddr=master.dandietz.com Procs=1 State=UNKNOWN
-PartitionName=DEFAULT Nodes=master.dandietz.com Default=YES MaxTime=INFINITE State=UP
+PartitionName=aws Nodes=master.dandietz.com Default=YES MaxTime=INFINITE State=UP
