--- a/ansible/roles/common/files/etc/slurm/slurm.conf
+++ b/ansible/roles/common/files/etc/slurm/slurm.conf
@@ -9,7 +9,7 @@
 # See the slurm.conf man page for more information.
 #
 ClusterName=cluster
-ControlMachine=master
+ControlMachine=master.dandietz.com
 #ControlAddr=
 #BackupController=
 #BackupAddr=
