--- a/ansible/roles/common/files/etc/slurm/slurm.conf
+++ b/ansible/roles/common/files/etc/slurm/slurm.conf
@@ -91,4 +91,4 @@ JobCompType=jobcomp/none
 # COMPUTE NODES
 NodeName=master NodeAddr=master.dandietz.com Procs=1 State=UNKNOWN
 PartitionName=DEFAULT State=UP
-PartitionName=aws Nodes=master.dandietz.com Default=YES MaxTime=INFINITE State=UP
+PartitionName=aws Nodes=master Default=YES MaxTime=INFINITE State=UP
