--- a/ansible/roles/common/files/etc/slurm/slurm.conf
+++ b/ansible/roles/common/files/etc/slurm/slurm.conf
@@ -89,6 +89,6 @@ JobCompType=jobcomp/none
 #AccountingStorageUser=
 #
 # COMPUTE NODES
-NodeName=master NodeAddr=master.dandietz.com Procs=1 State=UNKNOWN
-PartitionName=DEFAULT State=UP
-PartitionName=aws Nodes=master Default=YES MaxTime=INFINITE State=UP
+#
+NodeName=master.dandietz.com CPUs=1 State=UNKNOWN
+PartitionName=aws Nodes=master.dandietz.com Default=YES MaxTime=INFINITE State=UP
