--- a/ansible/roles/common/files/etc/slurm/slurm.conf
+++ b/ansible/roles/common/files/etc/slurm/slurm.conf
@@ -90,5 +90,5 @@ JobCompType=jobcomp/none
 #
 # COMPUTE NODES
 #
-NodeName=master.dandietz.com CPUs=1 State=UNKNOWN
-PartitionName=aws Nodes=master.dandietz.com Default=YES MaxTime=INFINITE State=UP
+NodeName=master NodeAddr=18.191.167.1 CPUs=1 State=UNKNOWN
+PartitionName=aws Nodes=master Default=YES MaxTime=INFINITE State=UP
