Add another fake

--- a/ansible/roles/common/files/etc/slurm/slurm.conf
+++ b/ansible/roles/common/files/etc/slurm/slurm.conf
@@ -91,4 +91,5 @@ JobCompType=jobcomp/none
 # COMPUTE NODES
 #
 NodeName=master NodeAddr=master.dandietz.com CPUs=1 State=UNKNOWN
-PartitionName=aws Nodes=master Default=YES MaxTime=INFINITE State=UP
+NodeName=master2 NodeAddr=master2.dandietz.com CPUs=1 State=UNKNOWN
+PartitionName=aws Nodes=master,master2 Default=YES MaxTime=INFINITE State=UP
