--- a/ansible/roles/common/files/etc/slurm/slurm.conf
+++ b/ansible/roles/common/files/etc/slurm/slurm.conf
@@ -90,6 +90,5 @@ JobCompType=jobcomp/none
 #
 # COMPUTE NODES
 #
-NodeName=master NodeAddr=master.dandietz.com CPUs=1 State=UNKNOWN
 NodeName=node01 NodeAddr=node01 CPUs=1 State=UNKNOWN
-PartitionName=aws Nodes=master,node[01] Default=YES MaxTime=INFINITE State=UP
+PartitionName=aws Nodes=node[01] Default=YES MaxTime=INFINITE State=UP
