--- a/ansible/roles/common/files/etc/slurm/slurm.conf
+++ b/ansible/roles/common/files/etc/slurm/slurm.conf
@@ -92,4 +92,6 @@ JobCompType=jobcomp/none
 #
 NodeName=master NodeAddr=master CPUs=1 State=UNKNOWN
 NodeName=node01 NodeAddr=node01 CPUs=1 State=UNKNOWN
-PartitionName=aws Nodes=master,node[01] Default=YES MaxTime=INFINITE State=UP
+NodeName=node02 NodeAddr=node02 CPUs=1 State=UNKNOWN
+NodeName=node03 NodeAddr=node03 CPUs=1 State=UNKNOWN
+PartitionName=aws Nodes=master,node[01-03] Default=YES MaxTime=INFINITE State=UP
