--- a/ansible/roles/common/files/etc/slurm/slurm.conf
+++ b/ansible/roles/common/files/etc/slurm/slurm.conf
@@ -90,8 +90,10 @@ JobCompType=jobcomp/none
 #
 # COMPUTE NODES
 #
+SuspendProgram=/usr/sbin/stop_instance.py
+ResumeProgram=/usr/sbin/start_instance.py
+SuspendTime=600
+
 NodeName=master NodeAddr=master CPUs=1 State=UNKNOWN
-NodeName=node01 NodeAddr=node01 CPUs=1 State=UNKNOWN
-NodeName=node02 NodeAddr=node02 CPUs=1 State=UNKNOWN
-NodeName=node03 NodeAddr=node03 CPUs=1 State=UNKNOWN
-PartitionName=aws Nodes=master,node[01-03] Default=YES MaxTime=INFINITE State=UP
+NodeName=node[00-09] NodeAddr=node[00-09] CPUs=1 State=CLOUD
+PartitionName=aws Nodes=master,node[01-09] Default=YES MaxTime=INFINITE State=UP
