--- a/ansible/roles/common/files/etc/slurm/slurm.conf
+++ b/ansible/roles/common/files/etc/slurm/slurm.conf
@@ -96,4 +96,5 @@ SuspendTime=600
 
 NodeName=master NodeAddr=master CPUs=1 State=UNKNOWN
 NodeName=node[00-09] NodeAddr=node[00-09] CPUs=1 State=CLOUD
-PartitionName=aws Nodes=master,node[01-09] Default=YES MaxTime=INFINITE State=UP
+PartitionName=aws Nodes=master Default=YES MaxTime=INFINITE State=UP
+PartitionName=aws-1 Nodes=node[00-09] Default=NO MaxTime=INFINITE State=UP
