--- a/ansible/roles/common/files/etc/slurm/slurm.conf
+++ b/ansible/roles/common/files/etc/slurm/slurm.conf
@@ -93,6 +93,7 @@ JobCompType=jobcomp/none
 SuspendProgram=/usr/sbin/stop_instance.py
 ResumeProgram=/usr/sbin/start_instance.py
 SuspendTime=300
+ResumeTimeout=300
 
 NodeName=master NodeAddr=master CPUs=1 State=UNKNOWN
 NodeName=node[00-02] NodeAddr=node[00-02] CPUs=1 State=CLOUD
