--- a/ansible/roles/common/files/etc/slurm/slurm.conf
+++ b/ansible/roles/common/files/etc/slurm/slurm.conf
@@ -90,8 +90,8 @@ JobCompType=jobcomp/none
 #
 # COMPUTE NODES
 #
-SuspendProgram=/usr/sbin/stop_instance.py
-ResumeProgram=/usr/sbin/start_instance.py
+SuspendProgram=/usr/sbin/slurm_suspend.sh
+ResumeProgram=/usr/sbin/slurm_resume.sh
 SuspendTime=300
 ResumeTimeout=300
 
