--- a/ansible/roles/common/tasks/base_packages.yml
+++ b/ansible/roles/common/tasks/base_packages.yml
@@ -14,6 +14,7 @@
          - mariadb-libs
          - mlocate
          - gcc
+         - gcc-fortran
          - git
          - readline-devel
          - openssl-devel
