--- a/ansible/roles/common/tasks/base_packages.yml
+++ b/ansible/roles/common/tasks/base_packages.yml
@@ -7,6 +7,7 @@
          - bzip2
          - bzip2-devel
          - bzip2-libs
+         - curl
          - "https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm"
          - libtool
          - mariadb
