--- a/ansible/roles/common/tasks/base_packages.yml
+++ b/ansible/roles/common/tasks/base_packages.yml
@@ -15,6 +15,7 @@
          - mariadb-libs
          - mlocate
          - gcc
+         - gcc-c++
          - gcc-gfortran
          - git
          - readline-devel
